# Tetris_cpp

./: CMakeLists.txt
.cache/clangd/index/: game.cpp.FD740F24F1E1E428.idx  game.h.9D3F99842416B7D8.idx  main.cpp.DE69DE30A5DD2BB0.idx  shapes.h.B90E2A777992F60B.idx  shaps.cpp.2709639573F8ACC5.idx  terminal.cpp.17C9F58B3DF53601.idx  terminal.h.6D172EA533EF313B.idx
include/: game.h  shapes.h  terminal.h
src/: game.cpp  main.cpp  shaps.cpp  terminal.cpp
